--- a/index.html
+++ b/index.html
@@ -307,6 +307,15 @@
 <!--                </a>-->
 <!--              </span>-->
               <span class="link-block">
+                <a href="https://huggingface.co/hikkilover/Scene-Diffusion" target="_blank"
+                class="external-link button is-normal is-rounded is-dark">
+                <span class="icon">
+                  <i class="fas fa-th"></i>
+                </span>
+                <span>model</span>
+              </a>
+            </span>
+              <span class="link-block">
                 <a href="https://huggingface.co/datasets/hikkilover/3D-FUTURE-FCO" target="_blank"
                 class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
