--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 <span class="icon">
                   <i class="fas fa-th"></i>
                 </span>
-                <span>model</span>
+                <span>Model</span>
               </a>
             </span>
               <span class="link-block">
