--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 <span class="author-block">
                   Yihao Zhao<sup></sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Mingyu You</a><sup>*</sup>
+                    <a href="https://tjmyyou.github.io/" target="_blank">Mingyu You</a><sup>*</sup>
                   </span>
                   </div>
 
