--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
   
   <!-- Primary Meta Tags -->
   <!-- TODO: Replace with your paper title and author names -->
-  <meta name="title" content="PAPER_TITLE - AUTHOR_NAMES">
+  <meta name="title" content="Scene Diffusion: Text-driven Scene Image Synthesis Conditioning on a Single 3D Model - Xuan Han, Yihao Zhao and Mingyu You">
   <!-- TODO: Write a compelling 150-160 character description of your research -->
-  <meta name="description" content="BRIEF_DESCRIPTION_OF_YOUR_RESEARCH_CONTRIBUTION_AND_FINDINGS">
+  <meta name="description" content="Proposing a novel learning-based scene image synthesis framework, Scene Diffusion. By introducing the Shading Adaptive Condition Alignment and the Frequency Progression Training Schedule, it effectively improves the appearance fidelity and visual harmony of the synthesized images.">
   <!-- TODO: Add 5-10 relevant keywords for your research area -->
-  <meta name="keywords" content="KEYWORD1, KEYWORD2, KEYWORD3, machine learning, computer vision, AI">
+  <meta name="keywords" content="scene image synthesis, conditional image synthesis, diffusion model, image generation, AI">
   <!-- TODO: List all authors -->
-  <meta name="author" content="FIRST_AUTHOR_NAME, SECOND_AUTHOR_NAME">
+  <meta name="author" content="Xuan Han, Yihao Zhao and Mingyu You">
   <meta name="robots" content="index, follow">
   <meta name="language" content="English">
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="article">
   <!-- TODO: Replace with your institution or lab name -->
-  <meta property="og:site_name" content="INSTITUTION_OR_LAB_NAME">
+  <meta property="og:site_name" content="Multimedia Analysis & Robot Intelligence Lab">
   <!-- TODO: Same as paper title above -->
-  <meta property="og:title" content="PAPER_TITLE">
+  <meta property="og:title" content="Scene Diffusion: Text-driven Scene Image Synthesis Conditioning on a Single 3D Model">
   <!-- TODO: Same as description above -->
-  <meta property="og:description" content="BRIEF_DESCRIPTION_OF_YOUR_RESEARCH_CONTRIBUTION_AND_FINDINGS">
+  <meta property="og:description" content="Proposing a novel learning-based scene image synthesis framework, Scene Diffusion. By introducing the Shading Adaptive Condition Alignment and the Frequency Progression Training Schedule, it effectively improves the appearance fidelity and visual harmony of the synthesized images.">
   <!-- TODO: Replace with your actual website URL -->
   <meta property="og:url" content="https://YOUR_DOMAIN.com/YOUR_PROJECT_PAGE">
   <!-- TODO: Create a 1200x630px preview image and update path -->
@@ -74,7 +74,7 @@
 
 
   <!-- TODO: Replace with your paper title and authors -->
-  <title>PAPER_TITLE - AUTHOR_NAMES | Academic Research</title>
+  <title>Scene Diffusion: Text-driven Scene Image Synthesis Conditioning on a Single 3D Model - Xuan Han, Yihao Zhao and Mingyu You | Academic Research</title>
   
   <!-- Favicon and App Icons -->
   <link rel="icon" type="image/x-icon" href="static/images/lab-icon.png">
